--- a/index.html
+++ b/index.html
@@ -1,263 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>CHARLIE PUTH | Home | Fan made website</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript>
-        <link rel="stylesheet" href="assets/css/noscript.css" />
-    </noscript>
-    <!-- ye vo effect ka link hai filp  -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-    <!-- my css -->
-    <link rel="stylesheet" href="charlie.css">
-    <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CHARLIE PUTH | THE UNIVERSAL DEV</title>
 </head>
-
-<body class="homepage is-preload">
-    <div id="page-wrapper">
-
-        <!-- Header -->
-        <div id="header">
-
-            <!-- Inner -->
-            <div class="inner">
-                <header>
-                    <h1><a href="#" id="logo">CHARLIE PUTH</a></h1>
-                    <!-- <hr /> -->
-                    <!-- <p>Another fine freebie by HTML5 UP</p> -->
-                </header>
-                <!-- <footer>
-                    <a href="#banner" class="button circled scrolly">Welcome</a>
-                </footer> -->
-            </div>
-
-            <!-- Nav -->
-            <nav id="nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="charlieputhbio.html">Bio</a></li>
-                    <li>
-                        <a href="#">Music + Video</a>
-                        <ul>
-                            <li><a href="musicvideo.html">Music + Video</a></li>
-
-                            <li>
-                                <a href="#">Albums &#8594;</a>
-                                <ul>
-                                    <li><a href="lightswitch.html">Light Switch</a></li>
-                                    <li><a href="single.html">Singles & Others</a></li>
-                                    <li><a href="hard-on-your-self.html">Hard On Yourself</a></li>
-                                    <li><a href="girlfriend.html">Girlfriend</a></li>
-                                    <li><a href="mother.html">Mother</a></li>
-                                    <li><a href="cheating-on-you.html">Cheating On You</a></li>
-                                    <li><a href="i-warned-myself.html">I Warned Myself</a></li>
-                                    <li><a href="see-you-again.html">See You Again</a></li>
-                                    <li><a href="voicenotes.html">Voicenotes</a></li>
-                                    <li><a href="ninetrackmind.html">Nine Track Mind (Deluxe)</a></li>
-                                    <li><a href="sometypeoflove.html">Some Type Of Love EP</a></li>
-
-                                </ul>
-                            </li>
-                            <!-- <li><a href="#">Veroeros feugiat</a></li> -->
-                        </ul>
-                    </li>
-                    <li><a href="liveevents.html">Live events</a></li>
-                    <li><a href="https://www.charlieputh.com/" target="_blank">charlieputh.com</a></li>
-                </ul>
-            </nav>
-
-        </div>
-
-        <!-- Banner -->
-        <section id="banner">
-            <header>
-                <h2>Hi. You're looking at <strong>CHARLIE PUTH</strong>.</h2>
-                <p>
-                    A responsive website by <a href="https://theuniversaldev.42web.io" target="_blank">THE UNIVERSAL
-                        DEV</a>.
-                </p>
-            </header>
-        </section>
-         <iframe id='AmazonMusicEmbedB09JGFW84S' src='https://music.amazon.in/embed/B09JGFW84S/?id=aQFAppStIO&marketplaceId=A3K6Y4MI8GDYMT&musicTerritory=IN' width='100%' height='550px' style="border:1px solid rgba(0, 0, 0, 0.12);max-width:"></iframe>
-        <video width="100%" height="100%" class="bg video" autoplay muted loop>
-            <source src="cpvideo/cpmv.mp4" type="video/mp4">
-        </video>
-        <!-- Main -->
-        <div class="wrapper style2">
-
-            <article id="main" class="container special">
-                <!-- <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
-                <header>
-                    <iframe width="100%" height="551" src="https://www.youtube.com/embed/WFsAon_TWPQ"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <h2><a href="https://youtu.be/WFsAon_TWPQ" target="_blank">Charlie Puth - Light Switch [Official
-                            Music Video]</a></h2>
-                    <p>
-                        Released on Jan 20, 2022
-                    </p>
-                </header>
-                <!-- <p>
-                    Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan
-                    massa
-                    posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis
-                    purus
-                    sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis
-                    aliquam
-                    mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-                    lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                    consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi
-                    augue
-                    interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper
-                    lacinia
-                    natoque aenean scelerisque.
-                </p>
-                <footer>
-                    <a href="#" class="button">Continue Reading</a>
-                </footer> -->
-            </article>
-        </div>
-
-
-        <!-- Features -->
-        <div class="wrapper style1">
-
-            <section id="features" class="container special">
-                <header>
-                    <h2>Billion views</h2>
-                    <!-- <p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p> -->
-                </header>
-                <div class="row">
-                    <article class="col-4 col-12-mobile special">
-                        <!-- <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a> -->
-                        <iframe width="368" height="256" src="https://www.youtube.com/embed/RgKAFK5djSk"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <header>
-                            <a href="https://atlantic.lnk.to/SeeYouAgainAW" target="_blank">
-                                <button class="getitnow">
-                                    <span>GET IT NOW</a></span>
-                            </button>
-                        </header>
-                        <p>
-                            Wiz Khalifa - See You Again ft. Charlie Puth [Official Video] Furious 7 Soundtrack
-                        </p>
-                    </article>
-                    <article class="col-4 col-12-mobile special">
-                        <!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
-                        <iframe width="368" height="256" src="https://www.youtube.com/embed/3AtDnEC4zak"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <a href="https://atlantic.lnk.to/NineTrackMindAW" target="_blank">
-                            <button class="getitnow">
-                                <span>GET IT NOW</a></span>
-                        </button>
-                        <p>
-                            Charlie Puth - We Don't Talk Anymore (feat. Selena Gomez) [Official Video]
-                        </p>
-                    </article>
-                    <article class="col-4 col-12-mobile special">
-                        <!-- <a href="" class="image featured"> yaha pe image lag jayegi </a> -->
-                        <iframe width="368" height="256" src="https://www.youtube.com/embed/nfs8NYg7yQM"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
-                            <button class="getitnow">
-                                <span>GET IT NOW</a></span>
-                        </button>
-                        <p>
-                            Charlie Puth - Attention [Official Video]
-                        </p>
-                    </article>
-                </div>
-            </section>
-
-        </div>
-
-        <!-- Footer -->
-        <div id="footer">
-            <div class="container">
-                <div class="row">
-
-                </div>
-                <!-- <hr /> -->
-                <div class="row">
-                    <div class="col-12">
-
-                        <!-- Contact -->
-                        <section class="contact">
-                            <div style="text-align: center;">
-                                <h5 style="text-align: center;">Music,video & images are subject to copyright.</h5>
-                                <h5 style="text-align: center; ">© 2022
-                                    <a href="https://www.charlieputh.com/" target="_blank"
-                                        style="color: rgb(0, 0, 255);">
-                                        CHARLIE PUTH</a>
-                                    <h5 style="text-align: center;">℗ 2022 Atlantic Records Group LLC.</h5>
-
-                                </h5>
-                            </div>
-                            <!-- <header>
-                    <h3>Nisl turpis nascetur interdum?</h3>
-                  </header>
-                  <p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p> -->
-                            <ul class="icons">
-                                <li><a href="https://twitter.com/charlieputh" target="_blank"
-                                        class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                                <li><a href="https://www.facebook.com/charlieputh" target="_blank"
-                                        class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                                <li><a href="https://www.instagram.com/charlieputh/" target="_blank"
-                                        class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                                <!-- <li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-                    <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-                    <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li> -->
-                            </ul>
-                        </section>
-
-                        <!-- Copyright -->
-                        <div class="copyright">
-                            <ul>
-                                <li>Copyright &copy; 2021-2022 <a style="color: white;"
-                                        href="https://theuniversaldev.42web.io/" target="_blank">THE UNIVERSAL
-                                        DEV</a>.<br> All rights reserved.</li>
-                                <li>Designed, Developed & Maintained by :<br> <a style="color: white;"
-                                        href="https://theuniversaldev.42web.io/" target="_blank">THE UNIVERSAL DEV</a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <!-- ye script effect ki hai  -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 200, duration: 700
-        });
-    </script>
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-
+<body>
+    <div style="text-align: center; color:red; font-size:3rem;">
+    <h1>This website will be back on October 7th.</h1>
+    <H1>यह वेबसाइट 7 अक्टूबर को वापस आएगी |</H1>
+</div>
+<footer style="text-align: center; color:red; font-size:1rem;">
+    <h1>&copy; THE UNIVERSAL DEV</h1>
+</footer>
 </body>
-
 </html>
