--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>CHARLIE PUTH | THE UNIVERSAL DEV</title>
 </head>
 <body>
-    <div style="text-align: center; color:red; font-size:3rem;">
+    <div style="text-align: center; color:red; font-size:2rem;">
     <h1>This website will be back on October 7th.</h1>
+    <img style="width: 100%; height: 100%;"  src="charlie1500x500.jpg" alt="" srcset="">
     <H1>यह वेबसाइट 7 अक्टूबर को वापस आएगी |</H1>
 </div>
 <footer style="text-align: center; color:red; font-size:1rem;">
