--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
+            *{
+                font-family: 'Fugaz One', cursive;
+            }
+            </style>
+            
     </head>
     <body>
         <!-- Background Video-->
@@ -24,12 +32,16 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class="fst-italic lh-1 mb-4">This website will be back on October 7th.</h1>
+                    <h1 style="font-family: 'Fugaz One', cursive; font-style: italic; font-size:2.5rem;">This website will be back on October 7th.</h1>
+                    <div style="text-align: center; text-decoration: none;">
+                        <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank" style="text-decoration: none; border: 3px solid white; border-radius: 2px; color: white; background-color: black; padding: 5px; letter-spacing: 2mm; margin-bottom: 50px;">Pre-save CHARLIE</a>
+                    </div>
+                    <br>
                     <div>
                         <img style="width: 100%;" src="charlie1500x500.jpg" alt="">
                         <img style="width: 100%;" src="leftandright.jpg" alt="">
                         <img style="width: 100%;" src="charlie_white_0.png" alt="">
-                        <h3 style="text-align: center;" >&copy; THE UNIVERSAL DEV</h3>
+                        <h3 style="text-align: center; font-family: 'Fugaz One';" >&copy; THE UNIVERSAL DEV</h3>
                     </div>
                     
                     <!-- <p class="mb-5">We're working hard to finish the development of this site. Sign up below to receive updates and to be notified when we launch!</p> -->
