--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                     </div>
                     <br>
                     <div>
-                        <img style="width: 100%;" src="charlie1500x500.jpg" alt="">
-                        <img style="width: 100%;" src="leftandright.jpg" alt="">
+                        <iframe width="100%" height="200" src="https://www.youtube.com/embed/KyBHXjh0mzo" title="Charlie Puth - Smells Like Me (Official Audio)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <!-- <img style="width: 100%;" src="charlie1500x500.jpg" alt="">
+                        <img style="width: 100%;" src="leftandright.jpg" alt=""> -->
                         <img style="width: 100%;" src="charlie_white_0.png" alt="">
                         <h3 style="text-align: center; font-family: 'Fugaz One';" >&copy; THE UNIVERSAL DEV</h3>
                     </div>
