--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 style="font-family: 'Fugaz One', cursive; font-style: italic; font-size:2.5rem;">This website will be back on October 7th.</h1>
+                    <h1 style="font-family: 'Fugaz One', cursive; font-style: italic; font-size:2.5rem;">This website will be back soon.</h1>
                     <div style="text-align: center; text-decoration: none;">
-                        <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank" style="text-decoration: none; border: 3px solid white; border-radius: 2px; color: white; background-color: black; padding: 5px; letter-spacing: 2mm; margin-bottom: 50px;">Pre-save CHARLIE</a>
+                        <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank" style="text-decoration: none; border: 3px solid white; border-radius: 2px; color: white; background-color: black; padding: 5px; letter-spacing: 2mm; margin-bottom: 50px;">Liste to CHARLIE</a>
                     </div>
                     <br>
                     <div>
-                         <h2 style="font-family: 'Fugaz One', cursive;">Listen to this latest single.</h2>
-                        <iframe width="100%" height="200" src="https://www.youtube.com/embed/KyBHXjh0mzo" title="Charlie Puth - Smells Like Me (Official Audio)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <!-- <img style="width: 100%;" src="charlie1500x500.jpg" alt="">
-                        <img style="width: 100%;" src="leftandright.jpg" alt=""> -->
+
+                   
+
+
                         <img style="width: 100%;" src="charlie_white_0.png" alt="">
                         <h3 style="text-align: center; font-family: 'Fugaz One';" >&copy; THE UNIVERSAL DEV</h3>
                     </div>
