--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 style="font-family: 'Fugaz One', cursive; font-style: italic; font-size:2.5rem;">This website will be back soon.</h1>
                     <div style="text-align: center; text-decoration: none;">
-                        <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank" style="text-decoration: none; border: 3px solid white; border-radius: 2px; color: white; background-color: black; padding: 5px; letter-spacing: 2mm; margin-bottom: 50px;">Liste to CHARLIE</a>
+                        <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank" style="text-decoration: none; border: 3px solid white; border-radius: 2px; color: white; background-color: black; padding: 5px; letter-spacing: 2mm; margin-bottom: 50px;">Listen to CHARLIE</a>
                     </div>
                     <br>
                     <div>
